<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tracker3.MainActivity">

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:fontFamily="monospace"
        android:text="@string/cpf"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_username"
        android:layout_alignStart="@+id/tv_username"
        android:inputType="text"
        android:ems="17"
        android:hint="@string/cpf_hint"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_username"
        android:layout_alignStart="@+id/et_username"
        android:layout_marginTop="33dp"
        android:fontFamily="monospace"
        android:text="@string/password"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_password"
        android:layout_alignStart="@+id/tv_password"
        android:ems="17"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/btn_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_password"
        android:layout_alignStart="@+id/et_password"
        android:layout_centerInParent="true"
        android:layout_marginTop="0dp"
        android:backgroundTint="#FFFFFF"
        android:onClick="passForgot"
        android:text="@string/pass_forgot"
        android:textColor="@color/design_default_color_primary"
        />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_forgot"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:onClick="access"
        android:text="@string/login" />

    <Button
        android:id="@+id/btn_new_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_login"
        android:layout_centerInParent="true"
        android:layout_marginTop="33dp"
        android:backgroundTint="#FFFFFF"
        android:onClick="accountCreate"
        android:text="@string/new_account"
        android:textColor="@color/design_default_color_primary" />

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_new_account"
        android:layout_marginStart="20dp"
        android:layout_marginTop="33dp"
        android:fontFamily="monospace"
        android:textSize="20sp" />

</RelativeLayout>