<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/consent_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <TextView
                android:id="@+id/tv_gender_identity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="33dp"
                android:fontFamily="monospace"
                android:text="@string/gender_identity"
                android:textSize="20sp" />
            <Spinner
                android:id="@+id/spinner_identity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck" />
            <TextView
                android:id="@+id/tv_race"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="33dp"
                android:fontFamily="monospace"
                android:text="@string/race"
                android:textSize="20sp" />
            <Spinner
                android:id="@+id/spinner_race"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck" />
            <TextView
                android:id="@+id/tv_sexuality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="33dp"
                android:fontFamily="monospace"
                android:text="@string/sexuality"
                android:textSize="20sp" />
            <Spinner
                android:id="@+id/spinner_sexuality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck" />
            <TextView
                android:id="@+id/tv_income"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="monospace"
                android:text="@string/income"
                android:textSize="20sp" />
            <EditText
                android:id="@+id/et_income"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="17"
                android:hint="@string/income_hint"
                android:inputType="number"
                android:minHeight="48dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"/>
            <Button
                android:id="@+id/button_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp">
                <Space
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" >
                </Space>
                <Button
                    android:id="@+id/btn_filter_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:onClick="cancel"
                    android:backgroundTint="#FFFFFF"
                    android:textColor="@color/design_default_color_primary"
                    android:text="@string/cancel" />
                <Space
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" >
                </Space>
                <Button
                    android:id="@+id/btn_filters"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="updateFilters"
                    android:text="@string/filter" />
                <Space
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" >
                </Space>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>