<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:id="@+id/consent_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/footer"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_long"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="monospace"

                android:text="@string/consent_string" />

        </LinearLayout>
    </ScrollView>
    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <LinearLayout android:id="@+id/linearLayout3"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_width="match_parent">
            <Button android:text="@string/aceitar"
                android:layout_height="wrap_content"
                android:id="@+id/clear"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="2dp"/>
            <Button android:text="@string/recusar"
                android:layout_height="wrap_content"
                android:id="@+id/submit"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="8dp"/>
        </LinearLayout>

        <!---
        <Button
            android:id="@+id/consent_accept"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:
            android:text="@string/aceitar">
        </Button>

        <Button
            android:id="@+id/consent_decline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/consent_accept"
            android:text="@string/recusar">
        </Button>
        -->

    </RelativeLayout>

</RelativeLayout>
